--- a/trote/css/styles.css
+++ b/trote/css/styles.css
@@ -18,7 +18,7 @@ nav {
     padding: 10px;
     display: flex; /* Flex Boxing */
     /* alinhamento na horizontal - espaço entre os link */
-    justify-content: center;
+    justify-content: left;
     /* alinhamento na vertical */
     align-items: center;
 }
@@ -35,3 +35,27 @@ nav a {
     background: #005663; /* cor do fundo */
     border-radius: 5px; /* borda com canto arredondado */
 }
+nav a:hover {
+    background: #003d82
+}
+
+img {
+    width: 120px;
+    height: auto;
+    margin-right: 5px; /* espaçamento interno de 20px */
+    border-radius: 10px;
+}
+    .container {
+        width: 80%;
+        margin: 20px auto; /* 20px em cima e em braixo e automático esquerda e direita */
+        background: white;
+        /*espaçamen to interno é nos quatro lados */
+        padding: 20px;
+        border-radius: 10px;
+        text-align: justify;
+
+    }
+    h2 {
+        text-align: center;
+    }
+    
